# anki-next

./: .gitignore  .nxignore  Cargo.toml  README.md  default.nix  justfile  nx.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  shell.nix  tsconfig.json
.cargo/: config.toml
.devcontainer/: devcontainer.json
.github/workflows/: ci.yml
.idx/: dev.nix
apps/cli/: Cargo.toml  project.json
apps/cli/src/: main.rs
apps/tauri/: Cargo.toml  project.json  tauri.conf.json
apps/web/: components.json  package.json  postcss.config.js  project.json  tsconfig.app.json  tsconfig.json
apps/web/src/: main.tsx
apps/web/src/app/: app.tsx
nix/: anki.nix  deps.nix
npins/: sources.json
tasks/client-generator/: Cargo.toml  project.json
tasks/client-generator/src/: main.rs  service.rs
tasks/client_generator/: Cargo.toml  project.json
tasks/client_generator/src/: client.rs  main.rs  service.rs
tasks/query_generator/: Cargo.toml  project.json
tasks/query_generator/src/: main.rs
