
[workspace]
resolver = '2'
members = [
	'tasks/query_generator',
]

[workspace.dependencies]
anki = { git = 'https://github.com/ankitects/anki.git', rev = '038d85b1d9e1896e93a3e4a26f600c79ddc33611' }
anki_proto = { git = 'https://github.com/ankitects/anki.git', rev = '038d85b1d9e1896e93a3e4a26f600c79ddc33611' }
prost = '0.13'
