[package]
name = "anki-next-cli"
version = "0.1.0"
edition = "2021"


[dependencies]
axum = { version = "0.8.3", features = ["macros"] }
tokio = "1.44.2"
anki-backend = { workspace = true }
clap = { version = "4.5.36", features = ["derive"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
tower-http = { version = "0.6.2", features = ["trace", "cors"] }


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
