[package]
name = "client-generator"
version = "0.1.0"
edition = "2021"

[dependencies]
anki_io = { git = "https://github.com/ankitects/anki.git", rev = "ad073ab10c8d9877224db79157591e2d041642aa" }
anki_process = { git = "https://github.com/ankitects/anki.git", rev = "ad073ab10c8d9877224db79157591e2d041642aa" }
anki_proto_gen = { git = "https://github.com/ankitects/anki.git", rev = "ad073ab10c8d9877224db79157591e2d041642aa" }
anki_proto = { git = "https://github.com/ankitects/anki.git", rev = "ad073ab10c8d9877224db79157591e2d041642aa" }
anki_i18n = { git = "https://github.com/ankitects/anki.git", rev = "ad073ab10c8d9877224db79157591e2d041642aa" }
prost-reflect = "0.14.7"
convert_case = "0.8.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
