[package]
name = "client_generator"
version = "0.1.0"
edition = "2021"

[dependencies]
anki_io = { version = "0.0.0", path = "../../anki/rslib/io" }
anki_process = { version = "0.0.0", path = "../../anki/rslib/process" }
anki_proto_gen = { version = "0.0.0", path = "../../anki/rslib/proto_gen" }
anki_proto = { version = "0.0.0", path = "../../anki/rslib/proto" }
anki_i18n = { version = "0.0.0", path = "../../anki/rslib/i18n" }
prost-reflect = "0.14.7"
convert_case = "0.8.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
